--- a/app/src/main/res/layout/view_quote.xml
+++ b/app/src/main/res/layout/view_quote.xml
@@ -20,7 +20,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimary">
+                android:background="@color/app_color_pink">
 
                 <ImageView
                     android:id="@+id/iv_first"
