--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorControlHighlight">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/app_color_pink</item>
+        <item name="colorPrimaryDark">@color/app_color_pink</item>
+        <item name="colorAccent">@color/app_color_pink</item>
+        <item name="colorControlHighlight">@color/app_color_pink</item>
         <item name="android:textColorPrimary">@android:color/white</item>
     </style>
 
