--- a/app/src/main/res/layout/fragment_type_quotes.xml
+++ b/app/src/main/res/layout/fragment_type_quotes.xml
@@ -11,13 +11,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        >
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:gravity="center"
-          android:textSize="30sp"
-          android:text="Type Quotes"/>
+        android:orientation="vertical">
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="TYPE QUOTES"
+                android:textSize="30sp" />
+        </LinearLayout>
     </LinearLayout>
 </layout>
