--- a/app/src/main/res/layout/splash_screen_layout.xml
+++ b/app/src/main/res/layout/splash_screen_layout.xml
@@ -7,13 +7,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FCF8EF"
+        android:backgroundTint="@color/app_color_pink"
         android:gravity="center"
         android:orientation="vertical">
+
         <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="@drawable/img_heart"
+            android:contentDescription="@null" />
+
+        <TextView
+            style="@style/DescriptionStyle"
+            android:id="@+id/txt_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/background"
-            android:contentDescription="@null"
-            />
+            android:layout_gravity="center"
+            android:text="@string/title_home"
+             />
+
+        <TextView
+            android:id="@+id/txt_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/description_splash_screen"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="italic" />
     </LinearLayout>
 </layout>
