--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -25,10 +25,10 @@
         android:icon="@drawable/ic_heart"
         android:title="@null"
         app:showAsAction="ifRoom" />
-<!--    <item-->
-<!--        android:id="@+id/action_info"-->
-<!--        android:enabled="true"-->
-<!--        android:icon="@drawable/ic_profile"-->
-<!--        android:title="@null"-->
-<!--        app:showAsAction="ifRoom" />-->
+    <item
+        android:id="@+id/action_info"
+        android:enabled="true"
+        android:icon="@drawable/ic_info"
+        android:title="@null"
+        app:showAsAction="ifRoom" />
 </menu>
