--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="app_color_pink">#F2BDD0</color>
+<!--    <color name="app_color_pink">#FF8B95</color>-->
+    <color name="app_color_pink">#FFA6AC</color>
     <color name="app_color_heart">#D34E59</color>
     <color name="colorAccent">#D53A47</color>
     <color name="background">#2B292B</color>
@@ -42,4 +43,6 @@
     <color name="ground">#AD7235</color>
     <color name="md_blue_100">#81D4fA</color>
     <color name="md_blue_200">#0091EA</color>
+
+    <color name="disabled_text_color">#888888</color>
 </resources>
