--- a/app/src/main/res/layout/fragment_all_quotes.xml
+++ b/app/src/main/res/layout/fragment_all_quotes.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -21,12 +22,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical">
-            <TextView
+            <!--        <include-->
+            <!--            layout="@layout/view_quote"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_marginTop="15dp"-->
+            <!--            app:layout_constraintTop_toBottomOf="@id/toolbar"-->
+            <!--            app:layout_constraintBottom_toTopOf="@id/tabbar"/>-->
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_quotes"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="ALL QUOTES"
-                android:textSize="30sp" />
+                android:layout_height="match_parent"
+                app:layoutManager="@string/linear_layout_manager"
+                tools:listitem="@layout/view_quote" />
         </LinearLayout>
     </LinearLayout>
 </layout>
