--- a/app/src/main/res/layout/view_quote.xml
+++ b/app/src/main/res/layout/view_quote.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="model"
+            type="com.mrtdev.quoteslove.database.models.Quote" />
+
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -24,43 +32,53 @@
 
                 <ImageView
                     android:id="@+id/iv_first"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/avd_plus_to_minus"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
+                    android:src="@drawable/ic_heart"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/white"/>
 
 
                 <ImageView
                     android:id="@+id/iv_second"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/avd_plus_to_minus"
+                    android:layout_marginTop="10dp"
+                    android:contentDescription="@null"
+                    android:src="@drawable/heart"
                     app:layout_constraintLeft_toRightOf="@id/iv_first"
                     app:layout_constraintRight_toLeftOf="@id/iv_third"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/iv_third"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/avd_plus_to_minus"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:contentDescription="@null"
+                    android:src="@drawable/ic_heart"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/white" />
 
                 <TextView
                     android:id="@+id/tv_thinh"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/thinh"
+                    android:gravity="center"
+                    android:text="@{model.description}"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:fontFamily="@font/dancing_script_bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/iv_second"
                     app:layout_constraintStart_toStartOf="@id/iv_second"
-                    app:layout_constraintTop_toBottomOf="@id/iv_second" />
+                    app:layout_constraintTop_toBottomOf="@id/iv_second"
+                    tools:text="@string/thinh" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
