08_02_2021 Add new libs: Firebase and Sqlite 08_02_2021 Add default database 08_02_2021 Add function to load default database when running first time

--- a/app/src/main/res/layout/fragment_love.xml
+++ b/app/src/main/res/layout/fragment_love.xml
@@ -22,6 +22,7 @@
             android:id="@+id/vp_like"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             >
 
             <com.google.android.material.tabs.TabLayout
