--- a/app/src/main/res/layout/fragment_type_quotes.xml
+++ b/app/src/main/res/layout/fragment_type_quotes.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="model"
             type="com.mrtdev.quoteslove.ui.typequotes.viewmodel.TypeQuotesViewModel" />
@@ -17,16 +19,65 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="TYPE QUOTES"
-                android:textSize="30sp" />
-        </LinearLayout>
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/btn_blue"
+                android:layout_width="200dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:background="@drawable/shape_drawable_blue"
+                android:text="Thơ"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btn_light_blue"
+                android:layout_width="200dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:background="@drawable/shape_drawable_light_blue"
+                android:text="Thơ"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btn_blue" />
+
+            <Button
+                android:id="@+id/btn_pink"
+                android:layout_width="200dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:background="@drawable/shape_drawable_pink"
+                android:text="Thơ"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btn_light_blue" />
+
+            <Button
+                android:id="@+id/btn_pink_orange"
+                android:layout_width="200dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:background="@drawable/shape_drawable_pink_orange"
+                android:text="Thơ"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btn_pink" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 </layout>
