--- a/app/src/main/res/layout/view_quote.xml
+++ b/app/src/main/res/layout/view_quote.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/view_day"
+            android:id="@+id/view_quotes"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginHorizontal="16dp"
@@ -31,30 +31,30 @@
                 android:background="@color/app_color_pink">
 
                 <ImageView
-                    android:id="@+id/iv_first"
+                    android:id="@+id/iv_copy"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="15dp"
-                    android:src="@drawable/ic_heart"
+                    android:src="@drawable/ic_copy"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:tint="@color/white"/>
 
 
                 <ImageView
-                    android:id="@+id/iv_second"
+                    android:id="@+id/iv_content"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="10dp"
                     android:contentDescription="@null"
                     android:src="@drawable/heart"
-                    app:layout_constraintLeft_toRightOf="@id/iv_first"
-                    app:layout_constraintRight_toLeftOf="@id/iv_third"
+                    app:layout_constraintLeft_toRightOf="@id/iv_copy"
+                    app:layout_constraintRight_toLeftOf="@id/iv_like"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/iv_third"
+                    android:id="@+id/iv_like"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginTop="15dp"
@@ -75,9 +75,9 @@
                     android:textStyle="bold"
                     app:fontFamily="@font/dancing_script_bold"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@id/iv_second"
-                    app:layout_constraintStart_toStartOf="@id/iv_second"
-                    app:layout_constraintTop_toBottomOf="@id/iv_second"
+                    app:layout_constraintEnd_toEndOf="@id/iv_content"
+                    app:layout_constraintStart_toStartOf="@id/iv_content"
+                    app:layout_constraintTop_toBottomOf="@id/iv_content"
                     tools:text="Gửi thương gửi cả ngẩn ngơ trong lòng" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
