--- a/app/src/main/res/layout/fragment_type_quotes.xml
+++ b/app/src/main/res/layout/fragment_type_quotes.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/btn_blue"
                 android:layout_width="200dp"
                 android:layout_height="70dp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/space_16_dp"
                 android:background="@drawable/shape_drawable_blue"
                 android:text="Thơ"
                 android:textAllCaps="false"
@@ -41,7 +41,7 @@
                 android:id="@+id/btn_light_blue"
                 android:layout_width="200dp"
                 android:layout_height="70dp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/space_16_dp"
                 android:background="@drawable/shape_drawable_light_blue"
                 android:text="Thơ"
                 android:textAllCaps="false"
@@ -55,7 +55,7 @@
                 android:id="@+id/btn_pink"
                 android:layout_width="200dp"
                 android:layout_height="70dp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/space_16_dp"
                 android:background="@drawable/shape_drawable_pink"
                 android:text="Thơ"
                 android:textAllCaps="false"
@@ -69,7 +69,7 @@
                 android:id="@+id/btn_pink_orange"
                 android:layout_width="200dp"
                 android:layout_height="70dp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/space_16_dp"
                 android:background="@drawable/shape_drawable_pink_orange"
                 android:text="Thơ"
                 android:textAllCaps="false"
