--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,27 @@
-<resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+<resources xmlns:tools="http://schemas.android.com/tools">
+
+    <dimen name="space_2_dp">2dp</dimen>
+    <dimen name="space_3_dp">3dp</dimen>
+    <dimen name="space_8_dp">8dp</dimen>
+    <dimen name="space_10_dp">10dp</dimen>
+    <dimen name="space_15_dp">15dp</dimen>
+    <dimen name="space_16_dp">16dp</dimen>
+    <dimen name="space_20_dp">20dp</dimen>
+    <dimen name="space_25_dp">25dp</dimen>
+    <dimen name="space_30_dp">30dp</dimen>
+    <dimen name="space_60_dp">60dp</dimen>
+    <dimen name="space_80_dp">80dp</dimen>
+
+    <dimen name="text_size_8_sp">8sp</dimen>
+    <dimen name="text_size_9_sp">9sp</dimen>
+    <dimen name="text_size_10_sp">10sp</dimen>
+    <dimen name="text_size_11_sp">11sp</dimen>
+    <dimen name="text_size_12_sp">12sp</dimen>
+    <dimen name="text_size_13_sp">13sp</dimen>
+    <dimen name="text_size_14_sp">14sp</dimen>
+    <dimen name="text_size_16_sp">16sp</dimen>
+    <dimen name="text_size_18_sp">18sp</dimen>
+    <dimen name="text_size_20_sp">20sp</dimen>
+    <dimen name="text_size_22_sp">22sp</dimen>
+
 </resources>
