--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 
     <dimen name="space_2_dp">2dp</dimen>
     <dimen name="space_3_dp">3dp</dimen>
+    <dimen name="space_5_dp">5dp</dimen>
     <dimen name="space_8_dp">8dp</dimen>
     <dimen name="space_10_dp">10dp</dimen>
     <dimen name="space_15_dp">15dp</dimen>
